src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth__tests__json_placeholder_typename_root_level.snap
---
source: src/core/jit/synth/synth.rs
expression: "serde_json::to_string_pretty(&val).unwrap()"
---
{
  "__typename": "Query",
  "posts": [
    {
      "id": 1,
      "user": {
        "id": 1
      }
    },
    {
      "id": 2,
      "user": {
        "id": 1
      }
    },
    {
      "id": 3,
      "user": {
        "id": 1
      }
    },
    {
      "id": 4,
      "user": {
        "id": 1
      }
    },
    {
      "id": 5,
      "user": {
        "id": 1
      }
    },
    {
      "id": 6,
      "user": {
        "id": 1
      }
    },
    {
      "id": 7,
      "user": {
        "id": 1
      }
    },
    {
      "id": 8,
      "user": {
        "id": 1
      }
    },
    {
      "id": 9,
      "user": {
        "id": 1
      }
    },
    {
      "id": 10,
      "user": {
        "id": 1
      }
    },
    {
      "id": 11,
      "user": {
        "id": 2
      }
    },
    {
      "id": 12,
      "user": {
        "id": 2
      }
    },
    {
      "id": 13,
      "user": {
        "id": 2
      }
    },
    {
      "id": 14,
      "user": {
        "id": 2
      }
    },
    {
      "id": 15,
      "user": {
        "id": 2
      }
    },
    {
      "id": 16,
      "user": {
        "id": 2
      }
    },
    {
      "id": 17,
      "user": {
        "id": 2
      }
    },
    {
      "id": 18,
      "user": {
        "id": 2
      }
    },
    {
      "id": 19,
      "user": {
        "id": 2
      }
    },
    {
      "id": 20,
      "user": {
        "id": 2
      }
    },
    {
      "id": 21,
      "user": {
        "id": 3
      }
    },
    {
      "id": 22,
      "user": {
        "id": 3
      }
    },
    {
      "id": 23,
      "user": {
        "id": 3
      }
    },
    {
      "id": 24,
      "user": {
        "id": 3
      }
    },
    {
      "id": 25,
      "user": {
        "id": 3
      }
    },
    {
      "id": 26,
      "user": {
        "id": 3
      }
    },
    {
      "id": 27,
      "user": {
        "id": 3
      }
    },
    {
      "id": 28,
      "user": {
        "id": 3
      }
    },
    {
      "id": 29,
      "user": {
        "id": 3
      }
    },
    {
      "id": 30,
      "user": {
        "id": 3
      }
    },
    {
      "id": 31,
      "user": {
        "id": 4
      }
    },
    {
      "id": 32,
      "user": {
        "id": 4
      }
    },
    {
      "id": 33,
      "user": {
        "id": 4
      }
    },
    {
      "id": 34,
      "user": {
        "id": 4
      }
    },
    {
      "id": 35,
      "user": {
        "id": 4
      }
    },
    {
      "id": 36,
      "user": {
        "id": 4
      }
    },
    {
      "id": 37,
      "user": {
        "id": 4
      }
    },
    {
      "id": 38,
      "user": {
        "id": 4
      }
    },
    {
      "id": 39,
      "user": {
        "id": 4
      }
    },
    {
      "id": 40,
      "user": {
        "id": 4
      }
    },
    {
      "id": 41,
      "user": {
        "id": 5
      }
    },
    {
      "id": 42,
      "user": {
        "id": 5
      }
    },
    {
      "id": 43,
      "user": {
        "id": 5
      }
    },
    {
      "id": 44,
      "user": {
        "id": 5
      }
    },
    {
      "id": 45,
      "user": {
        "id": 5
      }
    },
    {
      "id": 46,
      "user": {
        "id": 5
      }
    },
    {
      "id": 47,
      "user": {
        "id": 5
      }
    },
    {
      "id": 48,
      "user": {
        "id": 5
      }
    },
    {
      "id": 49,
      "user": {
        "id": 5
      }
    },
    {
      "id": 50,
      "user": {
        "id": 5
      }
    },
    {
      "id": 51,
      "user": {
        "id": 6
      }
    },
    {
      "id": 52,
      "user": {
        "id": 6
      }
    },
    {
      "id": 53,
      "user": {
        "id": 6
      }
    },
    {
      "id": 54,
      "user": {
        "id": 6
      }
    },
    {
      "id": 55,
      "user": {
        "id": 6
      }
    },
    {
      "id": 56,
      "user": {
        "id": 6
      }
    },
    {
      "id": 57,
      "user": {
        "id": 6
      }
    },
    {
      "id": 58,
      "user": {
        "id": 6
      }
    },
    {
      "id": 59,
      "user": {
        "id": 6
      }
    },
    {
      "id": 60,
      "user": {
        "id": 6
      }
    },
    {
      "id": 61,
      "user": {
        "id": 7
      }
    },
    {
      "id": 62,
      "user": {
        "id": 7
      }
    },
    {
      "id": 63,
      "user": {
        "id": 7
      }
    },
    {
      "id": 64,
      "user": {
        "id": 7
      }
    },
    {
      "id": 65,
      "user": {
        "id": 7
      }
    },
    {
      "id": 66,
      "user": {
        "id": 7
      }
    },
    {
      "id": 67,
      "user": {
        "id": 7
      }
    },
    {
      "id": 68,
      "user": {
        "id": 7
      }
    },
    {
      "id": 69,
      "user": {
        "id": 7
      }
    },
    {
      "id": 70,
      "user": {
        "id": 7
      }
    },
    {
      "id": 71,
      "user": {
        "id": 8
      }
    },
    {
      "id": 72,
      "user": {
        "id": 8
      }
    },
    {
      "id": 73,
      "user": {
        "id": 8
      }
    },
    {
      "id": 74,
      "user": {
        "id": 8
      }
    },
    {
      "id": 75,
      "user": {
        "id": 8
      }
    },
    {
      "id": 76,
      "user": {
        "id": 8
      }
    },
    {
      "id": 77,
      "user": {
        "id": 8
      }
    },
    {
      "id": 78,
      "user": {
        "id": 8
      }
    },
    {
      "id": 79,
      "user": {
        "id": 8
      }
    },
    {
      "id": 80,
      "user": {
        "id": 8
      }
    },
    {
      "id": 81,
      "user": {
        "id": 9
      }
    },
    {
      "id": 82,
      "user": {
        "id": 9
      }
    },
    {
      "id": 83,
      "user": {
        "id": 9
      }
    },
    {
      "id": 84,
      "user": {
        "id": 9
      }
    },
    {
      "id": 85,
      "user": {
        "id": 9
      }
    },
    {
      "id": 86,
      "user": {
        "id": 9
      }
    },
    {
      "id": 87,
      "user": {
        "id": 9
      }
    },
    {
      "id": 88,
      "user": {
        "id": 9
      }
    },
    {
      "id": 89,
      "user": {
        "id": 9
      }
    },
    {
      "id": 90,
      "user": {
        "id": 9
      }
    },
    {
      "id": 91,
      "user": {
        "id": 10
      }
    },
    {
      "id": 92,
      "user": {
        "id": 10
      }
    },
    {
      "id": 93,
      "user": {
        "id": 10
      }
    },
    {
      "id": 94,
      "user": {
        "id": 10
      }
    },
    {
      "id": 95,
      "user": {
        "id": 10
      }
    },
    {
      "id": 96,
      "user": {
        "id": 10
      }
    },
    {
      "id": 97,
      "user": {
        "id": 10
      }
    },
    {
      "id": 98,
      "user": {
        "id": 10
      }
    },
    {
      "id": 99,
      "user": {
        "id": 10
      }
    },
    {
      "id": 100,
      "user": {
        "id": 10
      }
    }
  ]
}
