src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth__tests__multiple_nested.snap
---
source: src/core/jit/synth/synth.rs
expression: val
---
{
  "posts": [
    {
      "id": 1,
      "title": "Some Title",
      "user": {
        "id": 1,
        "name": "foo"
      }
    },
    {
      "id": 2,
      "title": "Not Some Title",
      "user": {
        "id": 2,
        "name": "bar"
      }
    }
  ],
  "users": [
    {
      "id": 1,
      "name": "Leanne Graham"
    },
    {
      "id": 2,
      "name": "Ervin Howell"
    }
  ]
}
