src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth__tests__posts_borrow.snap
---
source: src/core/jit/synth/synth.rs
expression: val
---
{
  "posts": [
    {
      "id": 1
    },
    {
      "id": 2
    }
  ]
}
